--- a/chessboard.html
+++ b/chessboard.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <title>CHESS BOARD</title>
+        <style>
+            label{
+                margin:1%;
+            }
+        </style>
     </head>
 <body>
     <script>
